--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,16 @@
 	<description>First project to manage books</description>
 	<properties>
 		<java.version>16</java.version>
+		<lombok.version>1.18.20</lombok.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
@@ -30,11 +35,13 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-        </dependency>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+
+		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
-            <version>2.4.5</version>
         </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
