some changes cannot insert data to method placeOrder

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 bookpz.catalog.query.title=Pan
 bookpz.catalog.query.author=Zygmunt
 bookpz.catalog.limit=1
+server.error.include-message=always
+spring.datasource.url=jdbc:postgresql://localhost:7432/bookpz
+spring.datasource.username=admin
+spring.datasource.password=pass123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
